--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html lang="en"><head></head><title>Meow小组任务管理</title><body><div id="app"></div><script type="text/javascript" src="main.build.js?c7c1a3016df8177753ee"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head></head>
+<title>Meow小组任务管理</title>
+
+<body>
+    <script type="text/javascript">
+    	window.location.href= './dist/index.html';
+    </script>
+</body>
+
+</html>
